# ultron-v5

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build_logs.txt  deploy_spaces.py  olympus_master_swarm_architecture.md  swarm_handoff_context.md
.github/workflows/: deploy_nancy.yml  deploy_swarm.yml  rust.yml
agent/: main.py  test_agent.py  test_e2e_pipeline.py
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: board.rs  config.rs  gateway.rs  llm.rs  main.rs  manager.rs  senator.rs  worker.rs
dashboard/: app.js  index.html  style.css
extension/: manifest.json  service-worker.js
extension/adapters/: deepseek.js  kimi.js
extension/content-scripts/: input-simulator.js  isolated-observer.js
extension/utils/: storage.js
gateway/: Cargo.toml  README.md
gateway/src/: config.rs  keypool.rs  main.rs  memory.rs  proxy.rs  rnd_loop.rs  router.rs  tantivy_engine.rs
hf-redis-space/: entrypoint.sh  webdis.json
hf-space/core/: auth.py  redis_client.py  router.py
hf-space/models/: openai.py
hf-space/routers/: api.py  extension.py  health.py  sessions.py
old code/: .gitignore  chatgpt convo.txt  get_logs.py  state.md
old code/.github/workflows/: deploy_swarm.yml  keepalive.yml
old code/agent/: Dockerfile  README.md  mythos_bug_hunting_prompt.txt  nancy_source_vault.txt  requirements.txt  test_orchestrator.py
old code/docs/: adding-providers.md  architecture.md  context_resume.md  debugging.md  setup.md
old code/extension/: manifest.json  service-worker.js
old code/extension/adapters/: base.js  chatgpt.js  claude.js  gemini.js  nim.js  zai.js
old code/extension/content-scripts/: input-simulator.js  isolated-observer.js  main-interceptor.js
old code/extension/side-panel/: panel.css  panel.html  panel.js
old code/extension/utils/: sse-parser.js  storage.js  timing.js
old code/gateway/: Cargo.toml
old code/gateway/src/: keypool.rs  main.rs  memory.rs
olympus-swarm/: .ruff.toml  Dockerfile
olympus-swarm/src/: main.py
olympus-swarm/src/core/: manager.py  orchestrator.py
olympus-swarm/src/memory/: working.py
olympus-swarm/tests/: test_ci_gate.py
spaces/memory-base/: Dockerfile  README.md  redis.conf  start.sh  webdis.json
