[workspace]
members = ["gateway", "crates/orchestrator"]
resolver = "2"

[workspace.dependencies]
tokio       = { version = "1", features = ["full"] }
reqwest     = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "stream"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
anyhow      = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy     = "0.15"
chrono      = { version = "0.4", features = ["serde"] }
clap        = { version = "4", features = ["derive", "env"] }

