[package]
name = "ultron-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.4", features = ["json"] }
redis = { version = "0.25.3", features = ["tokio-comp"] }
tantivy = "0.22.0"
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = "0.12"
uuid = { version = "1.8", features = ["v4"] }
moka = { version = "0.12.0", features = ["future"] }
